# pokemontcgpocketRL

./: .coverage  Makefile  README.md  apply_fixes_and_test.py  pyproject.toml  setup.py
.cursor/rules/: core.mdc
data/: A1.json  A1a.json  A2.json  A2a.json  A2b.json  A3.json  A3a.json  A3b.json  all_pokemon_cards.json  all_trainer_cards.json  categorized_trainer_cards.json  consolidated_cards_moves.json  consolidation_summary_moves.json  trainer_cards_summary.json  trainer_effects.json  trainer_effects.txt
data/cards/: A2b-001.json  A3-001.json
pokemontcgpocket_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py
src/card_db/: __init__.py  comprehensive_trainer_registry.py  core.py  extract_trainers_from_consolidated.py  loader.py  sample_data.py  scraper.py  storage.py  trainer_executor.py
src/card_db/trainer_effects/: __init__.py  actions.py  composites.py  conditions.py  context.py  selections.py
src/env/: __init__.py  pokemon_env.py
src/interface/: game_interface.py
src/net/: __init__.py
src/rules/: __init__.py  actions.py  constants.py  core.py  game_engine.py  game_state.py  phases.py
src/serve/: __init__.py
src/train/: __init__.py
tests/: __init__.py  test_specific_trainer_effects.py  test_trainer_system.py  test_trainer_system_simple.py
tests/card_db/: test_comprehensive_loader.py  test_comprehensive_trainer_registry.py  test_extract_trainers_from_consolidated.py  test_individual_trainer_cards.py  test_loader.py  test_scraper.py  test_storage.py  test_trainer_effects_integration.py  test_trainer_effects_unit.py  test_trainer_executor.py
tests/card_db/trainer_effects/: __init__.py  test_actions.py  test_composites.py  test_conditions.py  test_integration.py  test_selections.py  test_utils.py
tests/env/: __init__.py  test_pokemon_env.py  test_pokemon_env_action_masking.py  test_pokemon_env_integration.py  test_real_gameplay.py
tests/integration/: test_comprehensive_game_flow.py  test_full_game_flow.py  test_scenarios.py
tests/interface/: test_game_interface.py
tests/rules/: __init__.py  test_abilities.py  test_actions.py  test_card_core.py  test_combat.py  test_core_mechanics.py  test_deck_validation.py  test_energy_zone.py  test_game_engine.py  test_game_engine_advanced.py  test_game_engine_coverage.py  test_game_engine_edge_cases.py  test_game_mechanics.py  test_game_rules.py  test_game_state.py  test_game_state_coverage.py  test_integration_scenarios.py  test_point_system.py  test_tcg_pocket_complete_compliance.py  test_tcg_pocket_compliance.py
